Add POST and GET endpoints for Categories
