# src/routes/categories.routes.js
@@ -1,0 +1,27 @@
+import { Router } from 'express'
+import * as categoryController from '../controllers/category.controller'
+
+/* Middlewares */
+import validateCategory from '../middlewares/validation/validateCategory'
+import isAdmin from '../middlewares/auth/isAdmin'
+
+/* Routes config */
+const router = Router()
+
+router.post(
+  '/create',
+  [ isAdmin , validateCategory ],
+  categoryController.createCategory,
+)
+
+router.get(
+  '/getAll',
+  categoryController.getCategories
+)
+
+router.get(
+  '/getById/:categoryId',
+  categoryController.getCategoryById
+)
+
+export default router
